# apps/api/src/boxlite-rest/dto/create-box.dto.ts
@@ -47,17 +47,8 @@ export class NetworkSpecDto {
 }
 
 export class VolumeSpecDto {
-  @ValidateIf((volume) => volume.source !== undefined || (volume.host_path === undefined && volume.volume_id === undefined))
   @IsString()
-  source?: string
-
-  @ValidateIf((volume) => volume.host_path !== undefined)
-  @IsString()
-  host_path?: string
-
-  @ValidateIf((volume) => volume.volume_id !== undefined)
-  @IsString()
-  volume_id?: string
+  source: string
 
   @IsString()
   guest_path: string
